# RaquetteBaballe

./: .gitignore  .mailmap  CMakeCache.txt  CMakeLists.txt  Makefile  PKGBUILD  README.md  TODO.md  ball.hpp  brick.hpp  casse-briques  cmake_install.cmake  default_map.txt  engine.hpp  frame.hpp  main.cpp  point.hpp  rapport.ltx
.github/workflows/: cmake-multi-platform.yml  makefile.yml
Levels/: 0.txt  1.txt  2.txt  3.txt
bricks/: basic_brick.cpp  brick.hpp  gold_brick.cpp  gold_brick.hpp  main.cpp
clockTime/: controller.cpp  controller.hpp
controller/: controller.cpp
docs/: contact-us.html  download.html  game-guide.html  index.html  readme.html  style.css
includes/: colors.hpp
level/: level.txt
model/: model.cpp  model.hpp
model/ball/: ball.cpp  ball.hpp
model/border/: border.cpp
model/bounceable/: bounceable.cpp  bounceable.hpp
model/bounding_box/: bounding_box.cpp  bounding_box.hpp
model/brick/: basic_brick.cpp  brick.cpp  brick.hpp  gold_brick.cpp
model/bricks/: basic_brick.cpp  basic_brick.hpp  brick.cpp  brick.hpp  gold_brick.cpp  gold_brick.hpp
model/game_board/: game_board.cpp  game_board.hpp
model/life/: life.cpp
model/point/: point.cpp  point.hpp
model/racket/: racket-bounding-box.cpp  racket-bounding-box.hpp  racket.cpp  racket.hpp
model/rectangle/: rectangle.cpp  rectangle.hpp
model/score/: score.hpp
model/vec2/: vec2.cpp  vec2.hpp
other/raquette-baballe-1.0.0/: CMakeLists.txt
other/raquette-baballe-1.0.0/ressources/: raquette-baballe.desktop
other/raquette-baballe-1.0.0/ressources/levels/: 6.txt
other/raquette-baballe-1.0.0/src/controller/: controller_game.cpp
other/raquette-baballe-1.0.0/src/model/bonus/: abstract_timed_bonus.cpp
other/raquette-baballe-1.0.0/src/model/bonus_pill/: bonus_pill.cpp  bonus_pill.hpp
other/raquette-baballe-1.0.0/src/model/bounceable/: bounceable.hpp
other/raquette-baballe-1.0.0/src/model/brick/: basic_brick.cpp
other/raquette-baballe-1.0.0/src/model/game_board/: game_board.cpp
other/raquette-baballe-1.0.0/src/model/score_manager/: score_manager.cpp
other/raquette-baballe-1.0.0/src/model/vec2/: vec2.hpp
other/raquette-baballe-1.0.0/src/view/color/: colors.hpp
other/raquette-baballe-1.0.0/src/view/display_game/: display_game.cpp  display_game.hpp
other/raquette-baballe-1.0.0/src/view/piece/: bonus_pill_ui.cpp  bonus_pill_ui.hpp  brick_ui.cpp  brick_ui.hpp  racket_ui.hpp  wall_ui.cpp  wall_ui.hpp
rapport/: .gitignore  rapport.ltx
ressources/levels/: 0.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
src/: global_variables.cpp  global_variables.hpp  initialize_allegro.cpp  main.cpp
src/canvas/: canvas.cpp  canvas.hpp
src/colors/: colors.hpp
src/controller/: controller_game.cpp  controller_game.hpp
src/controller/level_manager/: level_manager.cpp  level_manager.hpp
src/controller/levels/: levels.cpp  levels.hpp
src/figures/: circle.cpp  circle.hpp  forme.cpp  forme.hpp  point.cpp  point.hpp  rectangle.cpp  rectangle.hpp
src/game_over/: draw_game_over.cpp
src/game_piece/: ball.cpp  ball.hpp
src/in_game/: in_game.cpp  in_game.hpp
src/init_allegro/: check_init.cpp  check_init.hpp  initialize_allegro.cpp  initialize_allegro.hpp
src/life/: life.cpp  life.hpp
src/log/: log.cpp  log.hpp
src/model/: game_board.hpp  model.cpp  model.hpp
src/model/ball/: ball.cpp  ball.hpp
src/model/bonus/: abstract_timed_bonus.hpp  basic_timed_bonus.cpp  basic_timed_bonus.hpp  bonus.cpp  bonus.hpp  bonus_pill.cpp  bonus_pill.hpp  bonus_type.hpp  slowdown_bonus.cpp  slowdown_bonus.hpp
src/model/bonus_pill/: bonus_pill.cpp  bonus_pill.hpp
src/model/bonus_type/: bonus_type.hpp
src/model/border/: border.cpp  border.hpp
src/model/bounceable/: bounceable.cpp  bounceable.hpp
src/model/bounding_box/: bounding_box.cpp  bounding_box.hpp
src/model/brick/: abstract_brick.cpp  abstract_brick.hpp  basic_brick.cpp  basic_brick.hpp  brick.cpp  brick.hpp  gold_brick.cpp  gold_brick.hpp
src/model/collision_solver/: collision_solver.cpp  collision_solver.hpp
src/model/game_board/: game_board.cpp  game_board.hpp
src/model/lazer/: lazer.cpp  lazer.hpp
src/model/life/: life.cpp  life.hpp
src/model/life_counter/: life_counter.cpp  life_counter.hpp
src/model/racket/: racket.cpp  racket.hpp
src/model/rectangle_shape/: rectangle_shape.cpp  rectangle_shape.hpp
src/model/score/: score.cpp  score.hpp
src/model/score_manager/: score_manager.cpp  score_manager.hpp
src/model/slow_down_queue/: slow_down_queue.cpp  slow_down_queue.hpp
src/model/vec2/: vec2.cpp  vec2.hpp
src/piece/: ball.cpp  ball.hpp  brik.cpp  lazer.cpp  lazer.hpp  racket.cpp  racket.hpp
src/score/: score.cpp  score.hpp
src/view/canvas/: canvas.cpp  canvas.hpp
src/view/color/: colors.cpp
src/view/display_game/: display_game.cpp  display_game.hpp
src/view/figures/: forme.hpp
src/view/game_over/: draw_game_over.cpp  draw_game_over.hpp
src/view/game_win/: draw_game_win.cpp  draw_game_win.hpp
src/view/piece/: ball_ui.cpp  ball_ui.hpp  bonus_pill_ui.cpp  bonus_pill_ui.hpp  brick_ui.cpp  brick_ui.hpp  lazer_ui.cpp  lazer_ui.hpp  racket_ui.cpp  racket_ui.hpp  wall_ui.cpp  wall_ui.hpp
src/vue/ball_renderer/: ball_renderer.cpp  ball_renderer.hpp
src/vue/brick_renderer/: brick_renderer.cpp  brick_renderer.hpp
src/vue/canvas/: canvas.cpp  canvas.hpp
src/vue/color/: colors.cpp  colors.hpp
src/vue/colors/: colors.hpp
src/vue/display_game/: display_game.cpp  display_game.hpp
src/vue/figures/: forme.cpp  forme.hpp  point.cpp  point.hpp
src/vue/game_over/: draw_game_over.cpp  draw_game_over.hpp
src/vue/game_win/: draw_game_win.cpp  draw_game_win.hpp
src/vue/piece/: ball.cpp  ball.hpp  ball_ui.cpp  ball_ui.hpp  bonus_pill_ui.cpp  bonus_pill_ui.hpp  brick_ui.cpp  brick_ui.hpp  brik.cpp  brik.hpp  brik_ui.cpp  brik_ui.hpp  gui_ball.cpp  gui_ball.hpp  gui_brik.cpp  gui_brik.hpp  gui_lazer.cpp  gui_lazer.hpp  gui_racket.cpp  (+10 more)
src/wall/: wall_game.cpp  wall_game.hpp
website/: README.md  contact-us.html  download.html  game-guide.html  index.html  readme.html  style.css
(+8 files in other folders)
